frontend/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: willcataco-prod-frontend
  namespace: willcataco-prod
  labels:
    app: willcataco-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: willcataco-frontend
      environment: prod
  template:
    metadata:
      labels:
        app: willcataco-frontend
        environment: prod
    spec:
      containers:
        - name: willcataco-frontend
          image: ghcr.io/willcataco-los-papus-y-sebas/willcataco:prod-e20e89fe89bc397a34733456b80bb14c4a7ad207
          ports:
            - containerPort: 80
