frontend/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: willcataco-prod-frontend
  namespace: willcataco-prod
spec:
  selector:
    app: willcataco-frontend
    environment: prod
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
