frontend/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: willcataco-prod-frontend
  namespace: willcataco-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: willcataco.chakisoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: willcataco-prod-frontend
                port:
                  number: 80
